basic bootstrap home page v3

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -37,6 +37,15 @@ $header-bg: #353353;
   margin-bottom: 8px;
 }
 
+.footer-social {
+  margin-top: 16px;
+
+  a {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+}
+
 .row.post {
   margin-bottom: 50px;
 }
